@@ -20,7 +20,7 @@ OCAMLFIND_DESTDIR="${pkgdir}$(ocamlfind printconf destdir)"
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
   mkdir -p "$OCAMLFIND_DESTDIR"
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --libexecdir=/usr/lib
   make
 }
 
