@@ -1,71 +1,49 @@
 # Maintainer: Simone Sclavi 'Ito' <darkhado@gmail.com>
 
 pkgname=eclipse-i18n-it 
-pkgver=3.7.0.v20111128043401   
+pkgver=4.2.0.v20120721043402   
 pkgrel=1
 __lang=it
-__R=R0.9.1
+__R=R0.10.0
+__codename=juno
 pkgdesc="Italian language pack for eclipse IDE"
 url="http://www.eclipse.org/babel/"
 depends=('eclipse')
 arch=('any')
-source=("http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-birt-${__lang}_${pkgver}.zip"
-        "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-eclipse-${__lang}_${pkgver}.zip"
-        "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-modeling.emft.emf-facet-${__lang}_${pkgver}.zip"
-        "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-modeling.gmp.graphiti-${__lang}_${pkgver}.zip"
-        "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-modeling.mdt.modisco-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-mylyn-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-rt.equinox-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-rt.equinox.p2-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-rt.rap-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-technology.actf-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-technology.dltk-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-technology.egit-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-technology.jubula-${__lang}_${pkgver}.zip" 
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-technology.stem-${__lang}_${pkgver}.zip" 
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-technology.uomo-${__lang}_${pkgver}.zip"  
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-tools.atf-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-tools.cdt-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-tools.gef-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-tools.objectteams-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-tools.tm-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.common-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.dali-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.jsdt-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.jsf-${__lang}_${pkgver}.zip"
-	    "http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.libra-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.servertools-${__lang}_${pkgver}.zip"  
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.sourceediting-${__lang}_${pkgver}.zip"
-    	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/${__R}/indigo/BabelLanguagePack-webtools.webservices-${__lang}_${pkgver}.zip")
+source=("http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-datatools-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-eclipse-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-modeling.emf-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-modeling.emf.cdo-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-modeling.gmp.gmf-tooling-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-mylyn-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-technology.actf-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-technology.koneki-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-technology.packaging.mpc-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-technology.subversive-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-tools.cdt-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-tools.cdt.tcf-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-tools.gef-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-tools.pdt-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-tools.tm-${__lang}_${pkgver}.zip"
+	"http://rm.mirror.garr.it/mirrors/eclipse/technology/babel/babel_language_packs/R0.10.0/${__codename}/BabelLanguagePack-webtools-${__lang}_${pkgver}.zip")
 license=('EPL')
-md5sums=('1367c76982a098f39b305c4ac53364c0'
-         'e141b7dd0944f846706aaf71fbac238c'
-         '359274b32e2e141c463ab5e3cb53b35c'
-         '60616764d5b142b67d2be8654a76c4dc'
-         'e31112422c6654cd3af65e04b1da73a5'
-         'ff691d43f1b0d261d0eeeef90c0c0fb3'
-         '66d7e996dab8c3b4ea772aba889794d6'
-         'fbdf0d5c308e674cab77b756d4f4c7ac'
-         '3d147229fdbde34e4fb03abe8496fb2b'
-         'd22bba09228b0a873eb277e200a9e0b7'
-         'e9bd4ada6671a12c3cd11ebe4277e563'
-         'fad6f775f029d45263c9ed4958e9f238'
-         '5a1744f2da68d3fcbaf823ce79068073'
-         '4a3e0340ddf8b7d2c0381955ac33a852'
-         '7e6c659854242e31f2204c47cfdb934b'
-         'dedb550b059d86faee34b076de878c92'
-         '8c7997eea9f570dff462d1ea3b454deb'
-         'c38f03c22fbe209bab70ad175da7d51e'
-         'c48041b2a7ebf7d3edb0930cce8051c4'
-         'a9f2832b203916875d5f7e05c4bfe81e'
-         'ce2c236ef700b2b603dc70ee232cb33f'
-         '63714539eb89b2825c8f22985f9a0a92'
-         'fbbf67ea736b06e194606da75a6ffdb9'
-         'de8fd37d47ab87b5b2293c8b677f1a7b'
-         '71e2a5d447bebfc85122468cce9a075e'
-         'e41ad7c8ee6e89509dc5a6bbc0fb621b'
-         'd308cdb4778f59d3d648e1a474fefd05'
-         'fed1b213862561a902478be7b69b06eb')
+md5sums=('705a66d0f13d91a7721e6d3bf0f42ee0'
+         'f0aaf29c6cbbbb375571b34aa2fdcf0b'
+         'a2cffd423320ace22f1b7476c0f88f0f'
+         '76bbe3daab184649e5aea787d659ed38'
+         '4298b9e87887368cd89bd5e5e43508e1'
+         '95abd428b49d306fcd2fa5cbe8aeab61'
+         '0aa31d2a981dc7d534fc5d97c9831729'
+         'f3de20fa4af8374ef27b747203bd3c9e'
+         'eba425ed3eb87e60a8f79da3bfa485d6'
+         'ddcab62da64b59fcbfa798f87f894d53'
+         '5abecb2109a2ea410fa818ca87008635'
+         'f2a3c432819ffc33f0e004c65a68efda'
+         'bcb374300b54f07bf1413c195695c1b3'
+         '8d6767a264f0ffeb4cdc8e89a06a5e87'
+         '0599de101b78feee7ff8145e5798096a'
+         '36f9d40856bd09719dabb06103b8dc4c')
+
 package() {
     mkdir -p ${pkgdir}/usr/share
     cp -R eclipse ${pkgdir}/usr/share
