@@ -12,9 +12,7 @@ install='geogebra-prim.install'
 source=("${pkgname}.sh"
 	"${pkgname}.desktop"
 	"${url}download/license.txt")
-md5sums=('2250bd77461f8c9bd42347a289165147'
-         '3bd363c33dfa8b6510e8e6a4e77611e7'
-         '39e2fbaf507a7b8db047152332d695c5')
+
 
 package() {
   cd "${srcdir}"
@@ -28,4 +26,6 @@ package() {
   # Installing license
   install -D -m644 license.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
-
+md5sums=('7d8824f9f18aefc4c12a90f03f67bec9'
+         '3bd363c33dfa8b6510e8e6a4e77611e7'
+         'eea82c3c9a213599777dfa6e21ed2867')
