@@ -1,7 +1,7 @@
 # Maintainer: moostik <mooostik_at_gmail.com>
 
 pkgname=geogebra
-pkgver=4.0.38.0
+pkgver=4.0.40.0
 pkgrel=1
 pkgdesc="Dynamic mathematics software with interactive graphics, algebra and spreadsheet"
 arch=('any')
@@ -16,7 +16,7 @@ install='geogebra.install'
 source=("http://${pkgname}.googlecode.com/files/GeoGebra-Unixlike-Installer-${pkgver}.tar.gz"
 	"${pkgname}.patch"
 	"${pkgname}.desktop.patch")
-md5sums=('1aaa75e3056c772c6aaae4e573d9ae2e'
+md5sums=('c6a5df4a02d3b5a20bfa1980b78af44a'
          '77625adf901f2356e38f1256ad29b75b'
          '534c4b9b618b6c75c8cf8abde6856232')
 
