@@ -1,5 +1,5 @@
 [Unit]
-Description=continuous integration server
+Description=An extendable open source continuous integration server
 After=network.target
 
 [Service]
@@ -10,7 +10,14 @@ StandardOutput=syslog
 StandardError=syslog
 SyslogIdentifier=jenkins
 ExecStart=@/usr/bin/java jenkins $JAVA_ARGS -jar $JENKINS_WAR $JENKINS_WEBROOT $JENKINS_PORT $JENKINS_AJPPORT
-LimitDATA=536870912
+#MemoryLimit=768M
+OOMScoreAdjust=-1000
+LimitCPU=infinity
+LimitFSIZE=infinity
+LimitDATA=infinity
+LimitCORE=0
+LimitAS=infinity
+LimitLOCKS=infinity
 
 [Install]
 WantedBy=multi-user.target
