@@ -11,7 +11,7 @@ depends=('kdelibs')
 conflicts=('geogebra-thumbnail-kde')
 makedepends=('automoc4' 'cmake')
 install='kde-thumbnailer-geogebra.install'
-source=("http://www.geogebra.org/download/GeoGebra_Thumbnail_KDE.tar.gz"
+source=("https://github.com/downloads/moostik/AUR-packages/GeoGebra_Thumbnail_KDE.tar.gz"
 	"desktop.patch")
 md5sums=('f4871dda757f80f0d792450d6c7ff2c2'
          '2527f7796798607044562b4d2ac71784')
