@@ -2,12 +2,13 @@
 
 pkgname=python-pyglet-hg
 pkgver=20120529
-pkgrel=1
+pkgrel=2
 pkgdesc="A cross-platform windowing and multimedia library for Python."
 arch=(any)
 url="http://pyglet.org"
 license=('BSD')
 depends=('python')
+optdepends=('avbin: for compressed audio/video')
 makedepends=('python-distribute' 'mercurial')
 conflicts=('pyglet')
 provides=('pyglet')
@@ -29,7 +30,12 @@ build() {
 	msg "Mercurial clone done or server timeout"
 	
 	cd ${_hgrepo}
-  
 	python setup.py build || return 1
+}
+
+package() {
+	cd ${_hgrepo}
 	python setup.py install --root=$pkgdir --optimize=1 || return 1
+    mkdir -p $pkgdir/usr/share/licenses/$pkgname
+    cp $srcdir/$_hgrepo/LICENSE $pkgdir/usr/share/licenses/$pkgname
 }
