@@ -3,10 +3,10 @@
 
 # Maintainer: Falk Stern <falk@fourecks.de>
 pkgname=shairport-git
-pkgver=20110731
-pkgrel=2
+pkgver=20120903
+pkgrel=1
 pkgdesc="an AirTunes/raop server"
-arch=(i686 x86_64)
+arch=(any)
 url="https://github.com/albertz/shairport"
 license=('shairport')
 depends=(avahi libao openssl perl-libwww perl-crypt-openssl-rsa perl-http-message)
