@@ -3,7 +3,7 @@
 #
 # When submitting fixes, Github pull requests are preferred.
 pkgname=systemd-memcached-units
-pkgver=0.1
+pkgver=0.2
 pkgrel=1
 pkgdesc="Memcached service for systemd"
 arch=('any')
@@ -17,10 +17,10 @@ source=(
 )
 md5sums=(
     3c78d1244dfd0186f325dfc0d2156fb2
-    795fb992d2c1509edc2712529ee6d17f
+    6599787a42de21fe37db717d5adaeffa
 )
 package() {
-  install -Dm644 "${srcdir}/memcached.service" "${pkgdir}/usr/lib/systemd/system/memcached.service"
+  install -Dm644 "${srcdir}/memcached.service" "${pkgdir}/etc/systemd/system/memcached.service"
 }
 
 
