@@ -1,6 +1,19 @@
 post_install() {
 cat << EOF
 
+!!! NOTICE !!!
+
+The unit file contained in this package will be stored in
+/etc/systemd/system to avoid conflicting upstream units supplied by package
+maintainers. Should an appropriate unit file be included with memcached,
+this package may be deleted, but it won't hurt to leave it installed.
+
+Stock packages for services like memcached tend to utilize the standard
+behavior of forking the daemon; this package relies on systemd to manage
+the daemon directly, without forking. If you like this newfangled behavior
+and the stock package is configured to fork the daemon instead, keep this
+one.
+
 ==> Remove memcached entry in rc.conf
 
 ==> To start memcached use this commands as root :
