@@ -1,7 +1,7 @@
 # Maintainer: Jan Dolinar <dolik.rce@gmail.com>
 
 pkgname=theide-nogtk-svn
-pkgver=5312
+pkgver=5316
 pkgrel=1
 pkgdesc="Modern IDE designed for developping large U++/C++ applications (nogtk version)"
 arch=('i686' 'x86_64')
