@@ -1,22 +1,23 @@
-# Maintainer: Lukas Fleischer <archlinux at cryptocrack dot de>
+# Maintainer: Christian Hesse <mail@eworm.de>
+# Contributor: Lukas Fleischer <archlinux at cryptocrack dot de>
 
 pkgname=zerofree
-pkgver=1.0.1
+pkgver=1.0.3
 pkgrel=1
 pkgdesc="Scans for non-zero free blocks in an ext2 filesystem and fills them with zeroes."
 arch=('i686' 'x86_64')
 url="http://intgat.tigress.co.uk/rmy/uml/sparsify.html"
 license=('GPL')
 depends=(e2fsprogs)
-source=(http://intgat.tigress.co.uk/rmy/uml/$pkgname-$pkgver.tgz)
-md5sums=('a8c772fdd134448f25ab4e7e12004595')
+source=(http://intgat.tigress.co.uk/rmy/uml/${pkgname}-${pkgver}.tgz)
 
 build() {
-  cd $srcdir/$pkgname-$pkgver
+  cd ${srcdir}/${pkgname}-${pkgver}
   make
 }
 
 package() {
-  cd $srcdir/$pkgname-$pkgver
-  install -Dm0755 zerofree $pkgdir/usr/bin/zerofree
+  cd ${srcdir}/${pkgname}-${pkgver}
+  install -Dm0755 zerofree ${pkgdir}/usr/bin/zerofree
 }
+sha256sums=('3acfda860be0f0ddcb5c982ff3b4475b1ee8cc35a90ae2a910e93261dbe0ccf6')
