@@ -1,6 +1,18 @@
+2012-09-03 Build User <jenkins@coast-project.org>
+
+      
+      PKGBUILD prepared for new jenkins-ci version 1.480
+
+
 2012-08-30 Marcel Huber <marcelhuberfoo@gmail.com>
 
       
+      adjusted systemd description and added more limit settings
+
+
+2012-08-30 Marcel Huber <marcelhuberfoo@gmail.com>
+
+      jenkins-ci-1.479-1:
       PKGBUILD prepared for new jenkins-ci version 1.479
 
 
